--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,82 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: #09f;
+}
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+  grid-auto-rows: 250px;
+  gap: 10px;
 }
 
-a {
-  color: #00B7FF;
+.character-card {
+  background-color: #fff;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  & img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+  }
+  & h3 {
+    margin: 8px 0;
+    font-size: 1.2rem;
+  }
+  & p {
+    margin: 4px 0;
+    color: #555;
+  }
 }
+
+.container2 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 50px;
+  gap: 1rem;
+  margin: 1rem;
+  background: #f0f0f0;
+}
+
+.child {
+  background: #fff;
+  padding: 1rem;
+  background: tomato;
+  text-align: center;
+}
+
+.child1 {
+  background: skyblue;
+  /*grid-row-start: 1;
+   grid-column-start: 1;
+  grid-row-end: 3;
+  grid-column-end: 5;   */
+  /* grid-column: 1/5;
+  grid-row: 1/3; */
+  /* grid-column: span 4;
+  grid-row: span 2; */
+  grid-area: 1 / 1 / 3 / 5;
+}
+
+.container3 {  display: grid;
+  grid-template-columns: 1.1fr 1.1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Header Header Header Header Header"
+    "Aside Main Main Main Main"
+    "Aside Main Main Main Main"
+    "Aside Main Main Main Main"
+    "Footer Footer Footer Footer Footer";
+}
+
+.Header { background-color: yellowgreen; grid-area: Header; }
+
+.Aside {background-color: green; grid-area: Aside; }
+
+.Main { background-color: purple;grid-area: Main; }
+
+.Footer { background-color: deeppink;grid-area: Footer; }
+
